--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
         </ul>
         <button type="button">все работы</button>
     </section>
+    <!-- наши партнеры -->
     <section>
         <p>Наши партнёры</p>
         <h2>400+ компаний
@@ -182,6 +183,7 @@
             </li>
         </ul>
     </section>
+    <!-- Статьи и новости -->
     <section>
         <p>статьи и новости</p>
         <h2>Все самое интересное</h2>
