Добавление Хедера и Футера

--- a/html/calendars.html
+++ b/html/calendars.html
@@ -7,6 +7,53 @@
     <title>Calendars</title>
 </head>
 <body>
-    
+        <header>
+        <a href="">promomix</a>
+        <nav>
+            <ul>
+                <li><button type="button">поиск</button></li>
+                <li><a href="tel:84964290900">8 496 429 09 00</a></li>
+                <li><button type="button">оставить заявку</button></li>
+            </ul>
+        </nav>
+    </header>
+    <footer>
+        <div>
+            <div>
+                <a href="">Promomix –
+                    рекламное агентство
+                    полного цикла
+                </a>
+                <button type="button">Оставить заявку</button>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="./html/about.html">О компании</a></li>
+                    <li><a href="./html/about.html">Услуги</a></li>
+                    <li><a href="./html/about.html">Наши работы</a></li>
+                    <li><a href="./html/about.html">Сервис</a></li>
+                    <li><a href="./html/about.html">Комплексные решения</a></li>
+                    <li><a href="./html/about.html">Статьи и новости</a></li>
+                    <li><a href="./html/about.html">Контакты</a></li>
+                </ul>
+            </nav>
+            <div>
+                <p>Чтобы быть в курсе всех акций и новых событий, подпишитесь на нашу рассылку.</p>
+                <form>
+                    <input type="email" placeholder="ваш e-mail">
+                    <!-- <input type="submit" placeholder="&#8594;"> -->
+                    <button type="submit">&#8594;</button>
+                </form>
+            </div>
+        </div>
+        <div>
+            <p>&copy; 2011 - 2020 Promomix</p>
+            <ul>
+                <li><a href="/">Facebook</a></li>
+                <li><a href="/">Vkontakte</a></li>
+                <li><a href="/">Instagram</a></li>
+            </ul>
+        </div>
+    </footer>
 </body>
 </html>
