Добавление IMG и Logo

--- a/index.html
+++ b/index.html
@@ -138,47 +138,47 @@
         <ul>
             <li>
                 <a href="">
-                <img src="" alt="Puma">
+                <img src="./image/logo/puma.svg" alt="Puma">
                 </a>
             </li>
             <li>
                 <a href="">
-                    <img src="" alt="Тинькофф">
+                    <img src="./image/logo/tinkof.svg" alt="Тинькофф">
                 </a>
             </li>
             <li>
                 <a href="">
-                    <img src="" alt="Ашан">
+                    <img src="./image/logo/ashan.svg" alt="Ашан">
                 </a>
             </li>
             <li>
                 <a href="">
-                    <img src="" alt="Lukoil">
+                    <img src="./image/logo/lukoil.svg" alt="Lukoil">
                 </a>
             </li>
             <li>
                 <a href="">
-                    <img src="" alt="Nike">
+                    <img src="./image/logo/nike.svg" alt="Nike">
                 </a>
             </li>
             <li>
                 <a href="">
-                    <img src="" alt="Zara">
+                    <img src="./image/logo/zara.svg" alt="Zara">
                 </a>
             </li>
             <li>
                 <a href="">
-                    <img src="" alt="Adidas">
+                    <img src="./image/logo/adidas.svg" alt="Adidas">
                 </a>
             </li>
             <li>
                 <a href="">
-                    <img src="" alt="Ostin">
+                    <img src="./image/logo/ostin.svg" alt="Ostin">
                 </a>
             </li>
             <li>
                 <a href="">
-                    <img src="" alt="Газпром">
+                    <img src="./image/logo/gazprom.svg" alt="Газпром">
                 </a>
             </li>
         </ul>
@@ -191,7 +191,7 @@
             <li>
                 <p>Новость</p>
                 <div>
-                    <img src="" alt="">
+                    <img src="./image/interesting/Rectangle 23 (3).jpg" width="420" height="236" alt="">
                 </div>
                 <div>
                     <p>21. 03. 2020</p>
@@ -203,7 +203,7 @@
             <li>
                 <p>Статья</p>
                 <div>
-                    <img src="" alt="">
+                    <img src="./image/interesting/Rectangle 23 (1) (1).jpg" width="420" height="236" alt="">
                 </div>
                 <div>
                     <p>21. 03. 2020</p>
@@ -215,7 +215,7 @@
             <li>
                 <p>Статья</p>
                 <div>
-                    <img src="" alt="">
+                    <img src="./image/interesting/Rectangle 23 (2) (1).jpg" width="420" height="236" alt="">
                 </div>
                 <div>
                     <p>21. 03. 2020</p>
