width and heigt logo

--- a/index.html
+++ b/index.html
@@ -138,47 +138,47 @@
         <ul>
             <li>
                 <a href="">
-                <img src="./image/logo/puma.svg" alt="Puma">
+                <img src="./image/logo/puma.svg" width="124" height="64" alt="Puma">
                 </a>
             </li>
             <li>
                 <a href="">
-                    <img src="./image/logo/tinkof.svg" alt="Тинькофф">
+                    <img src="./image/logo/tinkof.svg" width="124" height="64" alt="Тинькофф">
                 </a>
             </li>
             <li>
                 <a href="">
-                    <img src="./image/logo/ashan.svg" alt="Ашан">
+                    <img src="./image/logo/ashan.svg" width="124" height="64" alt="Ашан">
                 </a>
             </li>
             <li>
                 <a href="">
-                    <img src="./image/logo/lukoil.svg" alt="Lukoil">
+                    <img src="./image/logo/lukoil.svg" width="124" height="64" alt="Lukoil">
                 </a>
             </li>
             <li>
                 <a href="">
-                    <img src="./image/logo/nike.svg" alt="Nike">
+                    <img src="./image/logo/nike.svg" width="124" height="64" alt="Nike">
                 </a>
             </li>
             <li>
                 <a href="">
-                    <img src="./image/logo/zara.svg" alt="Zara">
+                    <img src="./image/logo/zara.svg" width="124" height="64" alt="Zara">
                 </a>
             </li>
             <li>
                 <a href="">
-                    <img src="./image/logo/adidas.svg" alt="Adidas">
+                    <img src="./image/logo/adidas.svg" width="124" height="64" alt="Adidas">
                 </a>
             </li>
             <li>
                 <a href="">
-                    <img src="./image/logo/ostin.svg" alt="Ostin">
+                    <img src="./image/logo/ostin.svg" width="124" height="64" alt="Ostin">
                 </a>
             </li>
             <li>
                 <a href="">
-                    <img src="./image/logo/gazprom.svg" alt="Газпром">
+                    <img src="./image/logo/gazprom.svg" width="124" height="64" alt="Газпром">
                 </a>
             </li>
         </ul>
