--- a/index.html
+++ b/index.html
@@ -30,25 +30,27 @@
                 <li><a href="/">Instagram</a></li>
             </ul>
     </section>
-    <!-- Услуги -->
+    <!-- Ключевые направления< -->
     <section>
         <p>услуги</p>
         <h2>Ключевые направления</h2>
         <ul>
-            <li><a href="/">Наружная
-                реклама</a></li>
-            <li><a href="/">Широкоформатная
-                печать</a></li>
-            <li><a href="/">Рекламная полиграфия</a></li>
-            <li><a href="/">Сувенирная
-                продукция</a></li>
-            <li><a href="/">Внутренняя
-                реклама</a></li>
-            <li><a href="/">Брендирование
-                одежды</a></li>
-            <li><a href="/">Брендирование
-                транспорта</a></li>
-            <li><a href="/">Все услуги</a></li>
+            <li><a href="">Наружная реклама</a>
+            </li>
+            <li><a href="">Широкоформатная печать</a>
+            </li>
+            <li><a href="">Рекламная полиграфия</a>
+            </li>
+            <li><a href="">Сувенирная продукция</a>
+            </li>
+            <li><a href="">Внутренняя реклама</a>
+            </li>
+            <li><a href="">Брендирование одежды</a>
+            </li>
+            <li><a href="">Брендирование транспорта</a>
+            </li>
+            <li><a href="">Все услуги</a>
+            </li>
         </ul>
     </section>
     <!-- Наши преимущества -->
