Добавление ссылки на Лого Promomix

--- a/html/about.html
+++ b/html/about.html
@@ -7,9 +7,9 @@
     <title>About</title>
 </head>
 <body>
-    <a href="../index.html">main</a>
+    <a href="">main</a>
     <header>
-        <a href="">promomix</a>
+        <a href="../index.html">promomix</a>
         <nav>
             <ul>
                 <li><button type="button">поиск</button></li>
