--- a/html/calendars.html
+++ b/html/calendars.html
@@ -8,7 +8,7 @@
 </head>
 <body>
         <header>
-        <a href="">promomix</a>
+        <a href="../index.html">promomix</a>
         <nav>
             <ul>
                 <li><button type="button">поиск</button></li>
