Создание HTML разметки страницы about

--- a/html/about.html
+++ b/html/about.html
@@ -7,7 +7,6 @@
     <title>About</title>
 </head>
 <body>
-    <a href="">main</a>
     <header>
         <a href="../index.html">promomix</a>
         <nav>
@@ -18,6 +17,173 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <!-- О компании -->
+        <section>
+            <h1>О компании</h1>
+            <p>Promomix – одна из крупнейших компаний на рекламном рынке Подмосковья.</p>
+            <img src="../image/about/image1.jpg" width="1400" alt="Колектив из 8 человек ведут дискуссию">
+            <ul>
+                <li>
+                    <p>18+</p>
+                    <p>лет опыта на
+                    рекламном рынке</p>
+                </li>
+                <li>
+                    <p>250+</p>
+                    <p>реализованных
+                    проектов</p>
+                </li>
+                <li>
+                    <p>37</p>
+                <p>квалифицированных
+                    сотрудников</p>
+                </li>
+                <li>
+                    <p>14+</p>
+                    <p>профессионального
+                    оборудования</p>
+                </li>
+            </ul>
+        </section>
+        <section>
+            <p>доверьте рекламУ профессионалам</p>
+            <h2>Мы создаем не просто рекламу, а формируем уникальный имидж
+                наших клиентов. Предоставляем широкий спектр услуг – от создания фирменного стиля до наружной рекламы. 
+                Благодаря современному оборудованию и точной работе наших сотрудников, ваш бизнес станет узнаваемым и успешным.
+            </h2>
+        </section>
+        <!-- Ключевые направления -->
+        <section>
+            <p>услуги</p>
+            <h2>Ключевые направления</h2>
+            <ul>
+                <li><a href="">Наружная реклама</a>
+                </li>
+                <li><a href="">Широкоформатная печать</a>
+                </li>
+                <li><a href="">Рекламная полиграфия</a>
+                </li>
+                <li><a href="">Сувенирная продукция</a>
+                </li>
+                <li><a href="">Внутренняя реклама</a>
+                </li>
+                <li><a href="">Брендирование одежды</a>
+                </li>
+                <li><a href="">Брендирование транспорта</a>
+                </li>
+                <li><a href="">Все услуги</a>
+                </li>
+            </ul>
+        </section>
+        <!-- История -->
+        <section>
+            <p>История</p>
+            <h2>18+ лет опыта на рекламном рынке</h2>
+            <ul>
+                <li>
+                    <h3>2011</h3>
+                    <p>Запустили цеха по производству рекламных материалов для обеспечения потребностей наших клиентов в полном цикле рекламных услуг. 
+                        Росли и развивались, постоянно пополняя ассортимент рекламной продукции.
+                    </p>
+                </li>
+                <li>
+                    <h3>2015</h3>
+                    <p>Провели модернизацию наших цехов. Закупили самые современные станки и принтеры. 
+                        Благодаря высокому качеству печати привлекли множество новых клиентов и стали востребованной компанией на рекламном рынке.
+                    </p>
+                </li>
+                <li>
+                    <h3>2017</h3>
+                    <p>Приобрели дополнительное оборудование, что позволило значительно расширить ассортимент изготавливаемой продукции. 
+                        Мощный рост направления нашей деятельности привел к разделению наружной рекламы и производства.
+                    </p>
+                </li>
+                <li>
+                    <h3>2019</h3>
+                    <p>На сегодняшний день компания Promomix входит в число наиболее энергично развивающихся рекламно-производственных компаний Подмосковья. 
+                        В наших цехах работают станки для производства практически всех видов рекламной продукции.
+                    </p>
+                </li>
+            </ul>
+            <img src="../image/about/image2.jpg" width="1200" alt="человек печатает текст на клавиатуре">
+        </section>
+        <!-- Оборудование -->
+        <section>
+            <h2>Оборудование</h2>
+            <ul>
+                <li><a href="">Фрезерный станок</a></li>
+                <li><a href="">Cублимационный плоттер</a></li>
+                <li><a href="">Принтер</a></li>
+                <li><a href="">Плоттер-каттер</a></li>
+                <li><a href="">Сольвентный плоттер</a></li>
+            </ul>
+        </section>
+        <!-- Воплощаем идеи -->
+        <section>
+            <p>наши работы</p>
+            <h2>Воплощаем идеи</h2>
+            <ul>
+                <li>
+                    <div>
+                        <img src="../image/image1.jpg" width="360" height="270" alt="img">
+                    </div>
+                    <h3>Кафе Starbucks Coffee</h3>
+                    <p>Вывеска объемная</p>
+                </li>
+                <li>
+                    <div>
+                        <img src="../image/image2.jpg" width="360" height="360" alt="img">
+                    </div>
+                    <h3>Bio бутик Flora</h3>
+                    <p>наружная реклама</p>
+                </li>
+                <li>
+                    <div>
+                        <img src="../image/image3.jpg" width="360" height="270" alt="img">
+                    </div>
+                    <h3>Сеть ресторанов Emosi</h3>
+                    <p>Вывеска объемная</p>
+                </li>
+                <li>
+                    <div>
+                        <img src="../image/image4.jpg" width="360" height="360" alt="img">
+                    </div>
+                    <h3>Бизнес центр Sierra</h3>
+                    <p>ФИРМЕННЫЙ СТИЛЬ</p>
+                </li>
+                <li>
+                    <div>
+                        <img src="../image/image5.jpg" width="360" height="270" alt="img">
+                    </div>
+                    <h3>Релакс студия Flora</h3>
+                    <p>ФИРМЕННЫЙ СТИЛЬ</p>
+                </li>
+                <li>
+                    <div>
+                        <img src="../image/image6.jpg" width="360" height="360" alt="img">
+                    </div>
+                    <h3>Магазин Levi's</h3>
+                    <p>Входная группа и вывеска</p>
+                </li>
+            </ul>
+            <button type="button">все работы</button>
+        </section>
+        <!-- Заявка -->
+        <section>
+            <h2>Заявка</h2>
+            <p>Оставьте заявку, наш менеджер обработает её и свяжется с вами в ближайшее время
+            </p>
+            <ul>
+                <li><button type="button">Имя</button></li>
+                <li><button type="button">Телефон</button></li>
+                <li><button type="button">Комментарий к заявке</button></li>
+                <li><button type="button">Прикрепить файл</button></li>
+                <li><button type="button">отправить</button></li>
+            </ul>
+            <p>Нажимая «Отправить» вы даёте согласие на обработку персональных данных</p>
+        </section>
+    </main>
     <footer>
         <div>
             <div>
