--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </header>
     <main>
     <!-- Герой -->
-    <section class="hero">
+    <section>
         <h1>Promomix – <br>
             рекламное агентство<br>
             полного цикла
@@ -82,7 +82,7 @@
                 </li>
             </ul>
     </section>
-    <!-- Наши работы -->
+    <!-- Воплощяем идеи -->
     <section>
         <p>наши работы</p>
         <h2>Воплощаем идеи</h2>
@@ -132,7 +132,7 @@
         </ul>
         <button type="button">все работы</button>
     </section>
-    <!-- наши партнеры -->
+    <!-- Компании -->
     <section>
         <p>Наши партнёры</p>
         <h2>400+ компаний
@@ -185,7 +185,7 @@
             </li>
         </ul>
     </section>
-    <!-- Статьи и новости -->
+    <!-- Все самое интересное -->
     <section>
         <p>статьи и новости</p>
         <h2>Все самое интересное</h2>
