--- a/html/catalogs.html
+++ b/html/catalogs.html
@@ -17,6 +17,267 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <section>
+            <ul>
+            <li><a href="">Наружная реклама</a>
+            </li>
+            <li><a href="">Широкоформатная печать</a>
+            </li>
+            <li><a href="">Рекламная полиграфия</a>
+            </li>
+            <li><a href="">Сувенирная продукция</a>
+            </li>
+            <li><a href="">Внутренняя реклама</a>
+            </li>
+            <li><a href="">Гравировка и резка</a>
+            </li>
+            <li><a href="">Брендирование одежды</a>
+            </li>
+            <li><a href="">Брендирование транспорта</a>
+            </li>
+            </ul>
+        </section>
+        <!-- Каталог и журналы -->
+        <section>
+            <h1>Каталоги и журналы</h1>
+            <p>Каталог - не просто презентация вашей компании, 
+                это мощный маркетинговый инструмент, который вызывает доверие к бренду и повышает продажи.
+            </p>
+        </section>
+        <img src="../image/catalogs/image1.jpg" alt="много раскрытых книг">
+        <!-- Виды каталогов -->
+        <section>
+            <h2>Виды каталогов</h2>
+            <p>Мы занимаемся печатью каталогов различных форматов, изготавливаем черно-белую и полноцветную полиграфию по офсетной и цифровой технологии. 
+                Благодаря собственному современному оборудованию мы можем осуществлять оперативную печать крупных тиражей.
+                Дизайнеры, по необходимости, разработают для вас оригинальный макет каталога, соответствующий требованиям.
+            </p>
+        </section>
+        <!-- Формат изготовления -->
+        <section>
+            <h2></h2>
+            <ul>
+                <li>
+                    <p>A4  |  297 x 210 мм</p>
+                    <img src="../image/catalogs/image2.jpg" width="210" height="297" alt="">
+                </li>
+                <li>
+                    <p>A5  |  210 x 148 мм</p>
+                    <img src="../image/catalogs/image3.jpg" width="148" height="210" alt="">
+                </li>
+                <li>
+                    <p>210 x 210 мм</p>
+                    <img src="../image/catalogs/image4.jpg" width="210" height="210" alt="">
+                </li>
+                <li>
+                    <p>A6  |  148 x 105 мм</p>
+                    <img src="../image/catalogs/image5.jpg" width="105" height="148" alt="">
+                </li>
+            </ul>
+        </section>
+        <!-- Виды скрепления -->
+        <section>
+            <h2>Виды скрепления</h2>
+            <p>Существующие варианты - скобы, термоклеевое крепление, переплет на пружину, прошив нитью. 
+                Выбирая между типами креплений, необходимо учитывать количество страниц будущего каталога. 
+            </p>
+            <ul>
+                <li>
+                    <img src="../image/catalogs/image6.jpg" width="255" height="190" alt="">
+                    <p>Скоба</p>
+                </li>
+                <li>
+                    <img src="../image/catalogs/image7.jpg" width="255" height="190" alt="">
+                    <p>Термоклей</p>
+                </li>
+                <li>
+                    <img src="../image/catalogs/image8.jpg" width="255" height="190" alt="">
+                    <p>Пружина</p>
+                </li>
+                <li>
+                    <img src="../image/catalogs/image9.jpg" width="255" height="190" alt="">
+                    <p>КШС</p>
+                </li>
+            </ul>
+        </section>
+        <!-- Стоимость -->
+        <section>
+            <ul>
+                <li><button type="button">Цифровая печать</button></li>
+                <li><button type="button">Офсетная печать</button></li>
+                <li><button type="button">Дизайн</button></li>
+            </ul>
+            <button type="button">Тонкая бумага 130 г/м2</button>
+            <p>Срок печати цифровым способом 1 - 2 дня</p>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Формат / Цвет</th>
+                        <th>50 шт</th>
+                        <th>100 шт</th>
+                        <th>200 шт</th>
+                        <th>300 шт</th>
+                        <th>400 шт</th>
+                        <th>500 шт</th>
+                        <th>600 шт</th>
+                        <th>800 шт</th>
+                        <th>1000 шт</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>А7 / 4+0</td>
+                        <td>460</td>
+                        <td>580</td>
+                        <td>800</td>
+                        <td>990</td>
+                        <td>1200</td>
+                        <td>1400</td>
+                        <td>1520</td>
+                        <td>1920</td>
+                        <td>2200</td>
+                    </tr>
+                    <tr>
+                        <td>А7 / 4+4</td>
+                        <td>460</td>
+                        <td>580</td>
+                        <td>800</td>
+                        <td>990</td>
+                        <td>1200</td>
+                        <td>1400</td>
+                        <td>1520</td>
+                        <td>1920</td>
+                        <td>2200</td>
+                    </tr>
+                    <tr>
+                        <td>А6 / 4+0</td>
+                        <td>460</td>
+                        <td>580</td>
+                        <td>800</td>
+                        <td>990</td>
+                        <td>1200</td>
+                        <td>1400</td>
+                        <td>1520</td>
+                        <td>1920</td>
+                        <td>2200</td>
+                    </tr>
+                    <tr>
+                        <td>А6 / 4+4</td>
+                        <td>460</td>
+                        <td>580</td>
+                        <td>800</td>
+                        <td>990</td>
+                        <td>1200</td>
+                        <td>1400</td>
+                        <td>1520</td>
+                        <td>1920</td>
+                        <td>2200</td>
+                    </tr>
+                    <tr>
+                        <td>98х210 / 4+0</td>
+                        <td>460</td>
+                        <td>580</td>
+                        <td>800</td>
+                        <td>990</td>
+                        <td>1200</td>
+                        <td>1400</td>
+                        <td>1520</td>
+                        <td>1920</td>
+                        <td>2200</td>
+                    </tr>
+                    <tr>
+                        <td>98х210 / 4+4</td>
+                        <td>460</td>
+                        <td>580</td>
+                        <td>800</td>
+                        <td>990</td>
+                        <td>1200</td>
+                        <td>1400</td>
+                        <td>1520</td>
+                        <td>1920</td>
+                        <td>2200</tdd
+                    </tr>
+                </tbody>
+            </table>
+        </section>
+        <!-- Доп. Услуги -->
+        <section>
+            <h2>Дополнительные услуги</h2>
+            <ul>
+                <li><button type="button">Ламинация</button></li>
+                <li><button type="button">УФ печать</button></li>
+                <li><button type="button">Тиснение</button></li>
+                <li><button type="button">Допечатная подготовка</button></li>
+                <li><button type="button">Цветопроба</button></li>
+                <li><button type="button">Персонализация</button></li>
+            </ul>
+        </section>
+        <!-- Наши работы -->
+        <section>
+                    <h2>Наши работы</h2>
+                    <ul>
+                        <li>
+                            <div>
+                                <img src="../image/image1.jpg" width="360" height="270" alt="img">
+                            </div>
+                            <h3>Кафе Starbucks Coffee</h3>
+                            <p>Вывеска объемная</p>
+                        </li>
+                        <li>
+                            <div>
+                                <img src="../image/image2.jpg" width="360" height="360" alt="img">
+                            </div>
+                            <h3>Bio бутик Flora</h3>
+                            <p>наружная реклама</p>
+                        </li>
+                        <li>
+                            <div>
+                                <img src="../image/image3.jpg" width="360" height="270" alt="img">
+                            </div>
+                            <h3>Сеть ресторанов Emosi</h3>
+                            <p>Вывеска объемная</p>
+                        </li>
+                        <li>
+                            <div>
+                                <img src="../image/image4.jpg" width="360" height="360" alt="img">
+                            </div>
+                            <h3>Бизнес центр Sierra</h3>
+                            <p>ФИРМЕННЫЙ СТИЛЬ</p>
+                        </li>
+                        <li>
+                            <div>
+                                <img src="../image/image5.jpg" width="360" height="270" alt="img">
+                            </div>
+                            <h3>Релакс студия Flora</h3>
+                            <p>ФИРМЕННЫЙ СТИЛЬ</p>
+                        </li>
+                        <li>
+                            <div>
+                                <img src="../image/image6.jpg" width="360" height="360" alt="img">
+                            </div>
+                            <h3>Магазин Levi's</h3>
+                            <p>Входная группа и вывеска</p>
+                        </li>
+                    </ul>
+                    <button type="button">все работы</button>
+        </section>
+        <!-- Заяка -->
+        <section>
+                    <h2>Заявка</h2>
+                    <p>Оставьте заявку, наш менеджер обработает её и свяжется с вами в ближайшее время
+                    </p>
+                    <ul>
+                        <li><button type="button">Имя</button></li>
+                        <li><button type="button">Телефон</button></li>
+                        <li><button type="button">Комментарий к заявке</button></li>
+                        <li><button type="button">Прикрепить файл</button></li>
+                        <li><button type="button">отправить</button></li>
+                    </ul>
+                    <p>Нажимая «Отправить» вы даёте согласие на обработку персональных данных</p>
+        </section>
+        <button type="button">Открытки</button>
+    </main>
     <footer>
         <div>
             <div>
