--- a/html/about.html
+++ b/html/about.html
@@ -22,7 +22,9 @@
         <section>
             <h1>О компании</h1>
             <p>Promomix – одна из крупнейших компаний на рекламном рынке Подмосковья.</p>
-            <img src="../image/about/image1.jpg" width="1400" alt="Колектив из 8 человек ведут дискуссию">
+            <div>
+                <img src="../image/about/image1.jpg" width="1400" alt="Колектив из 8 человек ведут дискуссию">
+            </div>
             <ul>
                 <li>
                     <p>18+</p>
@@ -112,11 +114,31 @@
         <section>
             <h2>Оборудование</h2>
             <ul>
-                <li><a href="">Фрезерный станок</a></li>
-                <li><a href="">Cублимационный плоттер</a></li>
-                <li><a href="">Принтер</a></li>
-                <li><a href="">Плоттер-каттер</a></li>
-                <li><a href="">Сольвентный плоттер</a></li>
+                <li><a href="">Фрезерный станок</a>
+                    <img src="" alt="">
+                    <h3></h3>
+                    <p></p>
+                </li>
+                <li><a href="">Cублимационный плоттер</a>
+                    <img src="" alt="">
+                    <h3></h3>
+                    <p></p>
+                </li>
+                <li><a href="">Принтер</a>
+                    <img src="" alt="">
+                    <h3></h3>
+                    <p></p>
+                </li>
+                <li><a href="">Плоттер-каттер</a>
+                    <img src="" alt="">
+                    <h3></h3>
+                    <p></p>
+                </li>
+                <li><a href="">Сольвентный плоттер</a>
+                    <img src="" alt="">
+                    <h3></h3>
+                    <p></p>
+                </li>
             </ul>
         </section>
         <!-- Воплощаем идеи -->
@@ -125,44 +147,22 @@
             <h2>Воплощаем идеи</h2>
             <ul>
                 <li>
-                    <div>
-                        <img src="../image/image1.jpg" width="360" height="270" alt="img">
-                    </div>
+                    <img src="../image/image1.jpg" width="360" height="270" alt="img">
                     <h3>Кафе Starbucks Coffee</h3>
                     <p>Вывеска объемная</p>
                 </li>
                 <li>
-                    <div>
-                        <img src="../image/image2.jpg" width="360" height="360" alt="img">
-                    </div>
-                    <h3>Bio бутик Flora</h3>
-                    <p>наружная реклама</p>
-                </li>
-                <li>
-                    <div>
-                        <img src="../image/image3.jpg" width="360" height="270" alt="img">
-                    </div>
+                    <img src="../image/image3.jpg" width="360" height="270" alt="img">
                     <h3>Сеть ресторанов Emosi</h3>
                     <p>Вывеска объемная</p>
                 </li>
                 <li>
-                    <div>
-                        <img src="../image/image4.jpg" width="360" height="360" alt="img">
-                    </div>
-                    <h3>Бизнес центр Sierra</h3>
-                    <p>ФИРМЕННЫЙ СТИЛЬ</p>
-                </li>
-                <li>
-                    <div>
-                        <img src="../image/image5.jpg" width="360" height="270" alt="img">
-                    </div>
+                    <img src="../image/image5.jpg" width="360" height="270" alt="img">
                     <h3>Релакс студия Flora</h3>
                     <p>ФИРМЕННЫЙ СТИЛЬ</p>
                 </li>
                 <li>
-                    <div>
-                        <img src="../image/image6.jpg" width="360" height="360" alt="img">
-                    </div>
+                    <img src="../image/image6.jpg" width="360" height="360" alt="img">
                     <h3>Магазин Levi's</h3>
                     <p>Входная группа и вывеска</p>
                 </li>
