Добавление SVG элементов

--- a/index.html
+++ b/index.html
@@ -35,21 +35,21 @@
         <p>услуги</p>
         <h2>Ключевые направления</h2>
         <ul>
-            <li><a href="">Наружная реклама</a>
+            <li><a href=""> <img src="./image/svg/image1.svg" width="55" alt=""> Наружная реклама</a>
             </li>
-            <li><a href="">Широкоформатная печать</a>
+            <li><a href=""> <img src="./image/svg/image2.svg" width="55" alt=""> Широкоформатная печать</a>
             </li>
-            <li><a href="">Рекламная полиграфия</a>
+            <li><a href=""> <img src="./image/svg/image3.svg" width="55" alt=""> Рекламная полиграфия</a>
             </li>
-            <li><a href="">Сувенирная продукция</a>
+            <li><a href=""> <img src="./image/svg/image4.svg" width="55" alt=""> Сувенирная продукция</a>
             </li>
-            <li><a href="">Внутренняя реклама</a>
+            <li><a href=""> <img src="./image/svg/image5.svg" width="55" alt=""> Внутренняя реклама</a>
             </li>
-            <li><a href="">Брендирование одежды</a>
+            <li><a href=""> <img src="./image/svg/image7.svg" width="55" alt=""> Брендирование одежды</a>
             </li>
-            <li><a href="">Брендирование транспорта</a>
+            <li><a href=""> <img src="./image/svg/image8.svg" width="55" alt=""> Брендирование транспорта</a>
             </li>
-            <li><a href="">Все услуги</a>
+            <li><a href=""> <img src="./image/svg/image9.svg" width="55" alt=""> Все услуги</a>
             </li>
         </ul>
     </section>
