--- a/html/services.html
+++ b/html/services.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -21,7 +21,7 @@
         <section>
             <h1>Услуги</h1>
             <ul>
-                <li><a href="">Наружная реклама</a>
+                <li><a href=""> <img src="../image/directions/image1.svg" alt=""> Наружная реклама</a>
                     <ul>
                         <li><a href="">Баннеры и брандмауэры</a></li>
                         <li><a href="">Оформление фасада</a></li>
@@ -31,7 +31,7 @@
                         <li><a href="">Стенды уличные</a></li>
                     </ul>
                 </li>
-                <li><a href="">Широкоформатная печать</a>
+                <li><a href=""> <img src="../image/directions/image2.svg" alt=""> Широкоформатная печать</a>
                     <ul>
                         <li><a href="">Печать баннеров</a></li>
                         <li><a href="">Печать на плёнке</a></li>
@@ -40,7 +40,7 @@
                         <li><a href="">Печать на холсте</a></li>
                     </ul>
                 </li>
-                <li><a href="">Рекламная полиграфия</a>
+                <li><a href=""> <img src="../image/directions/image3.svg" alt=""> Рекламная полиграфия</a>
                     <ul>
                         <li><a href="">Пластиковые карты</a></li>
                         <li><a href="">Наклейки и стикеры</a></li>
@@ -63,7 +63,7 @@
                         <li><a href="">Папки</a></li>
                     </ul>
                 </li>
-                <li><a href="">Сувенирная продукция</a>
+                <li><a href=""> <img src="../image/directions/image4.svg" alt=""> Сувенирная продукция</a>
                     <ul>
                         <li><a href="">Праздничные сувениры</a></li>
                         <li><a href="">Подарочные наборы</a></li>
@@ -79,7 +79,7 @@
                         <li><a href="">Магниты</a></li>
                     </ul>
                 </li>
-                <li><a href="">Внутренняя реклама</a>
+                <li><a href=""> <img src="../image/directions/image5.svg" alt=""> Внутренняя реклама</a>
                     <ul>
                         <li><a href="">Стойки ресепшн</a></li>
                         <li><a href="">Таблички и навигация</a></li>
@@ -90,14 +90,14 @@
                         <li><a href="">Световые панели</a></li>
                     </ul>
                 </li>
-                <li><a href="">Гравировка и резка</a>
+                <li><a href=""> <img src="../image/directions/image6.svg" alt=""> Гравировка и резка</a>
                     <ul>
                         <li><a href="">Лазерная резка и гравировка</a></li>
                         <li><a href="">Плоттерная резка</a></li>
                         <li><a href="">Фрезерная резка и гравировка</a></li>
                     </ul>
                 </li>
-                <li><a href="">Брендирование одежды</a>
+                <li><a href=""> <img src="../image/directions/image7.svg" alt=""> Брендирование одежды</a>
                     <ul>
                         <li><a href="">Корпоративная одежда</a></li>
                         <li><a href="">Домашний текстиль</a></li>
@@ -109,7 +109,7 @@
                         <li><a href="">Этикетки </a></li>
                     </ul>
                 </li>
-                <li><a href="">Брендирование транспорта</a>
+                <li><a href=""> <img src="../image/directions/image8.svg" alt=""> Брендирование транспорта</a>
                     <ul>
                         <li><a href="">Лайтбоксы на крышу</a></li>
                         <li><a href="">Оклейка автомобилей</a></li>
