--- a/index.html
+++ b/index.html
@@ -35,21 +35,21 @@
         <p>услуги</p>
         <h2>Ключевые направления</h2>
         <ul>
-            <li><a href=""> <img src="./image/svg/image1.svg" width="55" alt=""> Наружная реклама</a>
+            <li><a href=""> <img src="./image/directions/image1.svg" width="55" alt=""> Наружная реклама</a>
             </li>
-            <li><a href=""> <img src="./image/svg/image2.svg" width="55" alt=""> Широкоформатная печать</a>
+            <li><a href=""> <img src="./image/directions/image2.svg" width="55" alt=""> Широкоформатная печать</a>
             </li>
-            <li><a href=""> <img src="./image/svg/image3.svg" width="55" alt=""> Рекламная полиграфия</a>
+            <li><a href=""> <img src="./image/directions/image3.svg" width="55" alt=""> Рекламная полиграфия</a>
             </li>
-            <li><a href=""> <img src="./image/svg/image4.svg" width="55" alt=""> Сувенирная продукция</a>
+            <li><a href=""> <img src="./image/directions/image4.svg" width="55" alt=""> Сувенирная продукция</a>
             </li>
-            <li><a href=""> <img src="./image/svg/image5.svg" width="55" alt=""> Внутренняя реклама</a>
+            <li><a href=""> <img src="./image/directions/image5.svg" width="55" alt=""> Внутренняя реклама</a>
             </li>
-            <li><a href=""> <img src="./image/svg/image7.svg" width="55" alt=""> Брендирование одежды</a>
+            <li><a href=""> <img src="./image/directions/image7.svg" width="55" alt=""> Брендирование одежды</a>
             </li>
-            <li><a href=""> <img src="./image/svg/image8.svg" width="55" alt=""> Брендирование транспорта</a>
+            <li><a href=""> <img src="./image/directions/image8.svg" width="55" alt=""> Брендирование транспорта</a>
             </li>
-            <li><a href=""> <img src="./image/svg/image9.svg" width="55" alt=""> Все услуги</a>
+            <li><a href=""> <img src="./image/directions/image9.svg" width="55" alt=""> Все услуги</a>
             </li>
         </ul>
     </section>
@@ -193,7 +193,7 @@
             <li>
                 <p>Новость</p>
                 <div>
-                    <img src="./image/interesting/Rectangle 23 (3).jpg" width="420" height="236" alt="">
+                    <img src="./image/interesting/image1.jpg" width="420" height="236" alt="">
                 </div>
                 <div>
                     <p>21. 03. 2020</p>
@@ -205,7 +205,7 @@
             <li>
                 <p>Статья</p>
                 <div>
-                    <img src="./image/interesting/Rectangle 23 (1) (1).jpg" width="420" height="236" alt="">
+                    <img src="./image/interesting/image2.jpg" width="420" height="236" alt="">
                 </div>
                 <div>
                     <p>21. 03. 2020</p>
@@ -217,7 +217,7 @@
             <li>
                 <p>Статья</p>
                 <div>
-                    <img src="./image/interesting/Rectangle 23 (2) (1).jpg" width="420" height="236" alt="">
+                    <img src="./image/interesting/image3.jpg" width="420" height="236" alt="">
                 </div>
                 <div>
                     <p>21. 03. 2020</p>
