Добавление IMG и коррекция

--- a/html/polygraphy.html
+++ b/html/polygraphy.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,34 +7,34 @@
     <title>Polygraphy</title>
 </head>
 <body>
-    <header>
-        <a href="../index.html">promomix</a>
-        <nav>
-            <ul>
-                <li><button type="button">поиск</button></li>
-                <li><a href="tel:84964290900">8 496 429 09 00</a></li>
-                <li><button type="button">оставить заявку</button></li>
-            </ul>
-        </nav>
-    </header>
     <main>
+        <header>
+            <a href="../index.html">promomix</a>
+            <nav>
+                <ul>
+                    <li><button type="button">поиск</button></li>
+                    <li><a href="tel:84964290900">8 496 429 09 00</a></li>
+                    <li><button type="button">оставить заявку</button></li>
+                </ul>
+            </nav>
+        </header>
         <section>
             <ul>
-            <li><a href="">Наружная реклама</a>
+            <li><a href=""> <img src="../image/directions/image1.svg" alt=""> Наружная реклама</a>
             </li>
-            <li><a href="">Широкоформатная печать</a>
+            <li><a href=""> <img src="../image/directions/image2.svg" alt=""> Широкоформатная печать</a>
             </li>
-            <li><a href="">Рекламная полиграфия</a>
+            <li><a href=""> <img src="../image/directions/image3.svg" alt=""> Рекламная полиграфия</a>
             </li>
-            <li><a href="">Сувенирная продукция</a>
+            <li><a href=""> <img src="../image/directions/image4.svg" alt=""> Сувенирная продукция</a>
             </li>
-            <li><a href="">Внутренняя реклама</a>
+            <li><a href=""> <img src="../image/directions/image5.svg" alt=""> Внутренняя реклама</a>
             </li>
-            <li><a href="">Гравировка и резка</a>
+            <li><a href=""> <img src="../image/directions/image6.svg" alt=""> Гравировка и резка</a>
             </li>
-            <li><a href="">Брендирование одежды</a>
+            <li><a href=""> <img src="../image/directions/image7.svg" alt=""> Брендирование одежды</a>
             </li>
-            <li><a href="">Брендирование транспорта</a>
+            <li><a href=""> <img src="../image/directions/image8.svg" alt=""> Брендирование транспорта</a>
             </li>
             </ul>
         </section>
@@ -47,115 +47,115 @@
             <ul>
                 <li>
                     <a href="">
-                        <img src="" alt="">
+                        <img src="../image/polygraph/image1.jpg" alt="">
                         <p>Визитные карты</p>
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="" alt="">
+                        <img src="../image/polygraph/image2.jpg" alt="">
                         <p>Буклеты и лифлеты</p>
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="" alt="">
+                        <img src="../image/polygraph/image3.jpg" alt="">
                         <p>POS материалы</p>
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="" alt="">
+                        <img src="../image/polygraph/image4.jpg" alt="">
                         <p>Каталоги и журналы</p>
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="" alt="">
+                        <img src="../image/polygraph/image5.jpg" alt="">
                         <p>Наклейки и стикеры</p>
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="" alt="">
+                        <img src="../image/polygraph/image6.jpg" alt="">
                         <p>Конверты</p>
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="" alt="">
+                        <img src="../image/polygraph/image7.jpg" alt="">
                         <p>Плакаты и постеры</p>
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="" alt="">
+                        <img src="../image/polygraph/image8.jpg" alt="">
                         <p>Календари</p>
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="" alt="">
+                        <img src="../image/polygraph/image9.jpg" alt="">
                         <p>Открытки</p>
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="" alt="">
+                        <img src="../image/polygraph/image10.jpg" alt="">
                         <p>Листовки и флаеры</p>
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="" alt="">
+                        <img src="../image/polygraph/image11.jpg" alt="">
                         <p>Блокноты</p>
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="" alt="">
+                        <img src="../image/polygraph/image12.jpg" alt="">
                         <p>Ежедневники</p>
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="" alt="">
+                        <img src="../image/polygraph/image13.jpg" alt="">
                         <p>Упаковка</p>
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="" alt="">
+                        <img src="../image/polygraph/image14.jpg" alt="">
                         <p>Брошюры</p>
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="" alt="">
+                        <img src="../image/polygraph/image15.jpg" alt="">
                         <p>Пакеты</p>
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="" alt="">
+                        <img src="../image/polygraph/image16.jpg" alt="">
                         <p>Папки</p>
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="" alt="">
+                        <img src="../image/polygraph/image17.jpg" alt="">
                         <p>Бирки</p>
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="" alt="">
+                        <img src="../image/polygraph/image18.jpg" alt="">
                         <p>Бланки</p>
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="" alt="">
+                        <img src="../image/polygraph/image19.jpg" alt="">
                         <p>Пластиковые карты</p>
                     </a>
                 </li>
@@ -177,8 +177,8 @@
                     <h3>Доставка курьером</h3>
                     <p>Доставка курьером осуществляется в пределах МКАД
                         на следующий день, после изготовления продукции.</p>
-                    <p>менее 10 кг – 460</p>
-                    <p>свыше 10 кг – 760</p>
+                    <p>менее 10 кг – 460 &#8381;</p>
+                    <p>свыше 10 кг – 760 &#8381;</p>
                 </li>
             </ul>
         </section>
