--- a/html/catalogs.html
+++ b/html/catalogs.html
@@ -20,21 +20,21 @@
     <main>
         <section>
             <ul>
-            <li><a href="">Наружная реклама</a>
+            <li><a href=""> <img src="../image/directions/image1.svg" alt=""> Наружная реклама</a>
             </li>
-            <li><a href="">Широкоформатная печать</a>
+            <li><a href=""> <img src="../image/directions/image2.svg" alt=""> Широкоформатная печать</a>
             </li>
-            <li><a href="">Рекламная полиграфия</a>
+            <li><a href=""> <img src="../image/directions/image3.svg" alt=""> Рекламная полиграфия</a>
             </li>
-            <li><a href="">Сувенирная продукция</a>
+            <li><a href=""> <img src="../image/directions/image4.svg" alt=""> Сувенирная продукция</a>
             </li>
-            <li><a href="">Внутренняя реклама</a>
+            <li><a href=""> <img src="../image/directions/image5.svg" alt=""> Внутренняя реклама</a>
             </li>
-            <li><a href="">Гравировка и резка</a>
+            <li><a href=""> <img src="../image/directions/image6.svg" alt=""> Гравировка и резка</a>
             </li>
-            <li><a href="">Брендирование одежды</a>
+            <li><a href=""> <img src="../image/directions/image7.svg" alt=""> Брендирование одежды</a>
             </li>
-            <li><a href="">Брендирование транспорта</a>
+            <li><a href=""> <img src="../image/directions/image8.svg" alt=""> Брендирование транспорта</a>
             </li>
             </ul>
         </section>
@@ -45,7 +45,9 @@
                 это мощный маркетинговый инструмент, который вызывает доверие к бренду и повышает продажи.
             </p>
         </section>
-        <img src="../image/catalogs/image1.jpg" alt="много раскрытых книг">
+        <div>
+            <img src="../image/catalogs/image1.jpg" alt="много раскрытых книг">
+        </div>
         <!-- Виды каталогов -->
         <section>
             <h2>Виды каталогов</h2>
@@ -103,6 +105,7 @@
         </section>
         <!-- Стоимость -->
         <section>
+            <h2>Узнайте стоимость</h2>
             <ul>
                 <li><button type="button">Цифровая печать</button></li>
                 <li><button type="button">Офсетная печать</button></li>
@@ -128,75 +131,75 @@
                 <tbody>
                     <tr>
                         <td>А7 / 4+0</td>
-                        <td>460</td>
-                        <td>580</td>
-                        <td>800</td>
-                        <td>990</td>
-                        <td>1200</td>
-                        <td>1400</td>
-                        <td>1520</td>
-                        <td>1920</td>
-                        <td>2200</td>
+                        <td>460 &#8381;</td>
+                        <td>580 &#8381;</td>
+                        <td>800 &#8381;</td>
+                        <td>990 &#8381;</td>
+                        <td>1200 &#8381;</td>
+                        <td>1400 &#8381;</td>
+                        <td>1520 &#8381;</td>
+                        <td>1920 &#8381;</td>
+                        <td>2200 &#8381;</td>
                     </tr>
                     <tr>
                         <td>А7 / 4+4</td>
-                        <td>460</td>
-                        <td>580</td>
-                        <td>800</td>
-                        <td>990</td>
-                        <td>1200</td>
-                        <td>1400</td>
-                        <td>1520</td>
-                        <td>1920</td>
-                        <td>2200</td>
+                        <td>460 &#8381;</td>
+                        <td>580 &#8381;</td>
+                        <td>800 &#8381;</td>
+                        <td>990 &#8381;</td>
+                        <td>1200 &#8381;</td>
+                        <td>1400 &#8381;</td>
+                        <td>1520 &#8381;</td>
+                        <td>1920 &#8381;</td>
+                        <td>2200 &#8381;</td>
                     </tr>
                     <tr>
                         <td>А6 / 4+0</td>
-                        <td>460</td>
-                        <td>580</td>
-                        <td>800</td>
-                        <td>990</td>
-                        <td>1200</td>
-                        <td>1400</td>
-                        <td>1520</td>
-                        <td>1920</td>
-                        <td>2200</td>
+                        <td>460 &#8381;</td>
+                        <td>580 &#8381;</td>
+                        <td>800 &#8381;</td>
+                        <td>990 &#8381;</td>
+                        <td>1200 &#8381;</td>
+                        <td>1400 &#8381;</td>
+                        <td>1520 &#8381;</td>
+                        <td>1920 &#8381;</td>
+                        <td>2200 &#8381;</td>
                     </tr>
                     <tr>
                         <td>А6 / 4+4</td>
-                        <td>460</td>
-                        <td>580</td>
-                        <td>800</td>
-                        <td>990</td>
-                        <td>1200</td>
-                        <td>1400</td>
-                        <td>1520</td>
-                        <td>1920</td>
-                        <td>2200</td>
+                        <td>460 &#8381;</td>
+                        <td>580 &#8381;</td>
+                        <td>800 &#8381;</td>
+                        <td>990 &#8381;</td>
+                        <td>1200 &#8381;</td>
+                        <td>1400 &#8381;</td>
+                        <td>1520 &#8381;</td>
+                        <td>1920 &#8381;</td>
+                        <td>2200 &#8381;</td>
                     </tr>
                     <tr>
                         <td>98х210 / 4+0</td>
-                        <td>460</td>
-                        <td>580</td>
-                        <td>800</td>
-                        <td>990</td>
-                        <td>1200</td>
-                        <td>1400</td>
-                        <td>1520</td>
-                        <td>1920</td>
-                        <td>2200</td>
+                        <td>460 &#8381;</td>
+                        <td>580 &#8381;</td>
+                        <td>800 &#8381;</td>
+                        <td>990 &#8381;</td>
+                        <td>1200 &#8381;</td>
+                        <td>1400 &#8381;</td>
+                        <td>1520 &#8381;</td>
+                        <td>1920 &#8381;</td>
+                        <td>2200 &#8381;</td>
                     </tr>
                     <tr>
                         <td>98х210 / 4+4</td>
-                        <td>460</td>
-                        <td>580</td>
-                        <td>800</td>
-                        <td>990</td>
-                        <td>1200</td>
-                        <td>1400</td>
-                        <td>1520</td>
-                        <td>1920</td>
-                        <td>2200</tdd
+                        <td>460 &#8381;</td>
+                        <td>580 &#8381;</td>
+                        <td>800 &#8381;</td>
+                        <td>990 &#8381;</td>
+                        <td>1200 &#8381;</td>
+                        <td>1400 &#8381;</td>
+                        <td>1520 &#8381;</td>
+                        <td>1920 &#8381;</td>
+                        <td>2200 &#8381;</td>
                     </tr>
                 </tbody>
             </table>
@@ -218,44 +221,22 @@
                     <h2>Наши работы</h2>
                     <ul>
                         <li>
-                            <div>
-                                <img src="../image/image1.jpg" width="360" height="270" alt="img">
-                            </div>
+                            <img src="../image/image1.jpg" width="360" height="270" alt="img">
                             <h3>Кафе Starbucks Coffee</h3>
                             <p>Вывеска объемная</p>
                         </li>
                         <li>
-                            <div>
-                                <img src="../image/image2.jpg" width="360" height="360" alt="img">
-                            </div>
-                            <h3>Bio бутик Flora</h3>
-                            <p>наружная реклама</p>
-                        </li>
-                        <li>
-                            <div>
-                                <img src="../image/image3.jpg" width="360" height="270" alt="img">
-                            </div>
+                            <img src="../image/image3.jpg" width="360" height="270" alt="img">
                             <h3>Сеть ресторанов Emosi</h3>
                             <p>Вывеска объемная</p>
                         </li>
                         <li>
-                            <div>
-                                <img src="../image/image4.jpg" width="360" height="360" alt="img">
-                            </div>
-                            <h3>Бизнес центр Sierra</h3>
-                            <p>ФИРМЕННЫЙ СТИЛЬ</p>
-                        </li>
-                        <li>
-                            <div>
-                                <img src="../image/image5.jpg" width="360" height="270" alt="img">
-                            </div>
+                            <img src="../image/image5.jpg" width="360" height="270" alt="img">
                             <h3>Релакс студия Flora</h3>
                             <p>ФИРМЕННЫЙ СТИЛЬ</p>
                         </li>
                         <li>
-                            <div>
-                                <img src="../image/image6.jpg" width="360" height="360" alt="img">
-                            </div>
+                            <img src="../image/image6.jpg" width="360" height="360" alt="img">
                             <h3>Магазин Levi's</h3>
                             <p>Входная группа и вывеска</p>
                         </li>
